apps/production/bandung-coffeeshop-image/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod
  name: bandung-coffeeshop-image
  labels:
    app: bandung-coffeeshop-image
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: bandung-coffeeshop-image
  template:
    metadata:
      labels:
        app: bandung-coffeeshop-image
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node_type
                    operator: In
                    values:
                      - high-availability
      containers:
        - name: bandung-coffeeshop-image
          image: ghcr.io/dta32/bandung-coffeeshop-image:1790436622-1f9c652 # {"$imagepolicy": "flux-system:bandung-coffeeshop-image"}
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 8000
