apps/production/bandung-coffeeshop-image/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: bandung-coffeeshop-image-service
spec:
  selector:
    app: bandung-coffeeshop-image
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
